<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentStart="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    tools:context=".MainActivity"
    tools:ignore="RtlCompat">


    <LinearLayout
        android:id="@+id/myLinearMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Text_Nom"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/TextNom"

                android:textSize="18dp" />

            <EditText
                android:id="@+id/T_Nom"
                android:layout_width="match_parent"
                android:tooltipText="@string/TextNom"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/TextNom"
                android:inputType="textPersonName"
                android:textColor="@color/colorPrimaryDark"
                android:background="@android:color/background_light"
                tools:targetApi="o" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Text_Prenom"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/TextPrenom"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/T_Prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:background="@android:color/background_light"
                android:ems="10"
                android:hint="@string/TextPrenom"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/Text_Date"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/TextDateNaiss"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/T_Date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TextDateNaiss"
                android:inputType="text"
                android:focusable="false"
                android:textColor="@color/colorPrimaryDark"
                android:background="@android:color/background_light"
                android:onClick="datePicker"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textVilleNaiss"
                android:layout_width="160dp"
                android:layout_height="match_parent"
                android:text="@string/TextVilleNaiss"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/SpinnerVilleNaiss"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:entries="@array/villeNaiss"
                android:prompt="@string/TextVilleNaiss"
                android:textColor="@color/colorPrimaryDark"
                android:background="@android:color/background_light"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textDepartement"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/TextDepartement"
                android:textSize="18dp" />

            <Spinner
                android:id="@+id/SpinnerDepartement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/departements"
                android:prompt="@string/TextDepartement"
                android:textColor="@color/colorPrimaryDark"
                android:background="@android:color/background_light"
                android:spinnerMode="dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnAddNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"
                android:text="@string/btnAddNumberText"
                android:onClick="ajouterNumero"
                style="@android:style/Widget.Button"
                android:fontFamily="cursive"
                android:textSize="30dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnValidate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@android:color/background_light"
                android:text="@string/BtnValidateText"
                android:textSize="30dp"
                style="@android:style/Widget.Button"
                android:fontFamily="cursive"/>
        </LinearLayout>

    </LinearLayout>

</ScrollView>